--- a/index.html
+++ b/index.html
@@ -2,12 +2,21 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Journal</title>
+		<title>Journey</title>
+		<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 	</head>
 	<body>
-		<h1>Journal</h1>
+		<div class="navbar navbar-default navbar-fixed-top">
+			<div class="container">
+				<div class="navbar-header"><a href="#" class="navbar-brand" id="navbar-title">Journey</a></div>
+				<div class="collapse navbar-collapse">
+				</div>
+			</div>
+		</div>
 	</body>
 	<script>
+		require("./node_modules/bootstrap/dist/js/bootstrap.min.js")
 		require('./renderer.js')
 	</script>
 </html>
+
