--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 				</div>
 			</div>
 		</div>
+		<script src="node_modules/jquery/dist/jquery.js"></script>
+		<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+		<script>
+			require('./renderer.js');
+		</script>
 	</body>
-	<script>
-		require("./node_modules/bootstrap/dist/js/bootstrap.min.js")
-		require('./renderer.js')
-	</script>
 </html>
 
